kustomize/choremane/overlays/staging/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: choremane
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: choremane
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend
          image: pipelinedave/choremane-backend:a2c815ce93f5b7725a9a39b9f4b2019d26a90960
