kustomize/choremane/overlays/staging/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: choremane
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: choremane
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: pipelinedave/choremane-frontend:f3af0db348ad940c783fabb9ea4d52866de11f05
